# stockscout4

./: .env.example  Dockerfile  Procfile  README.md  __init__.py  config.py  main.py  nixpacks.toml  pipeline.py  pyproject.toml  railway.json  railway.toml  requirements.txt  test_run.py  web.py
agents/: __init__.py  analysts.py  prompts.py  researchers.py  traders.py
intel/: __init__.py  market_data.py  pi_scanner.py  trump_v3.py
utils/: __init__.py  llm_client.py  soulmate.py
