[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stockscout4*"]

[tool.setuptools.package-dir]
"" = "."

[project]
name = "stockscout4"
version = "0.1.0"
description = "AI Trading Desk - Multi-agent trading analysis with debate mechanism"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "The Menon Lab", email = "prahlad.menon@quant.md"}
]
keywords = ["trading", "ai", "llm", "agents", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
stockscout4 = "stockscout4.main:main"

[project.urls]
"Homepage" = "https://stockscout4.thinkcreate.ai"
"Repository" = "https://github.com/menonpg/stockscout4"
